  16. Some new multiclassing system options:  NO-BASE, NO-SUBONLY, NO-[X], and NO-GRP-[X] -- see the coffeemud.ini
  17. SHELL command now (finally) supports diff (thanks google code!).  
  18. Similar to #15, the entire world map, w/ cmare files, and down to room properties, is in VFS at /resources/map/... can edit properties!
  
//TODO: create/modify/destroy manufacturer
//TODO: add electronics to guides
//TODO: add electronics to MG
//TODO: http://games.groups.yahoo.com/group/coffeemud skip=1885,2881,2953,3274,15908,15914,16267
# Build 5.8.0.1 Release 7/22/2013
  Bug fix release -- removed Go-Ahead chars for tinyfugue
# Build 5.8.0 Release 7/21/2013
   1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
   ^^^Check out the altered WebServer guide, and make sure you integrate the pub. ini, admin.ini, and common.ini if you customized them.
   2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
   3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
   4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)
   5. Generic Abilities will now import/export when races that use them export
   6. (Internal) New factions now default into /resources/factions -- legacy locations will work too though.
   7. New Channel flag (ACCOUNTOOC) to force account names instead of channel names into messages.
   8. (Internal) randomdata.xml now at /resources/randareas/example.xml -- update your random area files and random Areas!
   9. MUD Logging to separate files now has more options, such as rolling logs based on entries or bytes, etc.
  10. Web Forum system now supports participation by empty Accounts (if using the account system), and web subscribe/unsubscribe